CopperMap is not visible. Small portion of background-image is shown but that'll be fixed later on

--- a/src/Components/Login/Login.css
+++ b/src/Components/Login/Login.css
@@ -4,8 +4,6 @@ html, body {
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
-    width:100%;
-    height:100%;
 }
 
 h2 {
